@@ -1,3 +1,9 @@
+2020-07-10 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  support/regression/tests/bug-3081.c:
+	  Fix bug #3081.
+
 2020-07-10 Sergey Belyashov <sergey.belyashov@gmail.com>
 
 	* device/lib/_memmove.c
